<resources>
    <string name="app_name">오늘 급식</string>
    <string name="text_yes">네</string>
    <string name="text_no">아니오</string>
    <string name="text_close">닫기</string>
    <string name="text_setting">설정</string>
    <string name="text_confirm">확인</string>
    <string name="nutrition_dialog_empty_cal_info">정보 없음</string>
    <string name="nutrition_dialog_empty_ntr_info">영양 정보가 없습니다.</string>
    <string name="nutrition_info">영양 정보</string>
    <string name="reset_setting">설정 초기화</string>
    <string name="reset_setting_desc">저장된 학교 및 학년/반 정보가\n모두 삭제됩니다.\n정말 초기화하시겠습니까?</string>
    <string name="alert_dialog_question_title">문의사항이 있으신가요?</string>
    <string name="alert_dialog_question_desc">아래의 주소를 눌러\n메일로 의견을 남겨주세요!</string>
    <string name="question_email_title">[오늘의 급식] 문의사항</string>
    <string name="toast_enter_email_app">메일 앱으로 연결합니다.</string>
    <string name="toast_copy_email_address">메일 주소가 복사되었습니다.</string>
    <string name="text_question">문의 사항</string>
    <string name="text_privacy_policy">개인정보처리방침</string>
    <string name="text_breakfast">아침</string>
    <string name="text_lunch">점심</string>
    <string name="text_dinner">저녁</string>
    <string name="text_notice">공지사항</string>
    <string name="text_schedule">학사일정</string>
    <string name="empty_schedule_desc">해당 월에 학사일정이 없습니다.</string>
    <string name="title_setting_school_info">학교를 설정해주세요</string>
    <string name="desc_setting_school_info">(추후 언제든 변경 가능합니다)</string>
    <string name="enter_school_name">학교 이름을 입력하세요</string>
    <string name="select_school_title">학교를 선택해주세요</string>
    <string name="empty_search_result">검색 결과가 없습니다.</string>
    <string name="enter_details_info">상세 정보를 입력해주세요</string>
    <string name="text_grade">학년</string>
    <string name="placeholder_input_grade">예: 3</string>
    <string name="text_class">반</string>
    <string name="placeholder_input_class">예: 1</string>
    <string name="input_info_caution">* 숫자로만 입력해주세요</string>
    <string name="complete_setting_text">설정 완료</string>
    <string name="unknown_school">알 수 없는 학교</string>
    <string name="text_timetable">시간표</string>
    <string name="text_empty_timetable_info">정보\n없음</string>
    <string name="text_weekly_menu">주간 메뉴</string>
    <string name="meal_type_breakfast">MORNING</string>
    <string name="meal_type_lunch">LUNCH</string>
    <string name="meal_type_dinner">DINNNER</string>
    <string name="empty_info">정보가 없습니다.</string>
    <string name="menu_breakfast_title">아침 메뉴</string>
    <string name="menu_lunch_title">점심 메뉴</string>
    <string name="menu_dinner_title">저녁 메뉴</string>
    <string name="nutrition_empty_day_title">영양 정보가 제공되지 않는 날입니다.</string>
    <string name="nutrition_dialog_title">📊 영양 정보</string>
    <string name="empty_info_dialog">정보 없음</string>
</resources>